--- a/.github/workflows/Hugo.yml
+++ b/.github/workflows/Hugo.yml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-        if: ${{ github.ref_name == 'master' }}
+        if: ${{ github.ref_name == 'main' }}
         with:
           path: './public'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        if: ${{ github.ref_name == 'master' }}
+        if: ${{ github.ref_name == 'main' }}
         uses: actions/deploy-pages@v1
